[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "econexp"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "pre-commit"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[project.urls]
Homepage = "https://github.com/thomascola-econ/econexp"
